--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@liveblocks/client": "^1.0.6",
     "@liveblocks/node": "^1.0.6",
     "@liveblocks/react": "^1.0.6",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.13.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -42,9 +43,7 @@
     "@remix-validated-form/with-zod": "^2.0.5",
     "@unocss/reset": "^0.51.8",
     "@vercel/remix": "1.15.0",
-    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "cuid": "^3.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.5",
     "inngest": "^1.8.0",
