--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@fontsource/rubik": "^4.5.14",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@liveblocks/client": "^1.0.7",
-    "@liveblocks/node": "^1.0.7",
-    "@liveblocks/react": "^1.0.7",
+    "@liveblocks/client": "^1.0.8",
+    "@liveblocks/node": "^1.0.8",
+    "@liveblocks/react": "^1.0.8",
     "@paralleldrive/cuid2": "^2.2.0",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-popover": "^1.0.5",
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
-    "@remix-run/router": "^1.6.0",
+    "@remix-run/router": "^1.6.1",
     "@remix-run/server-runtime": "^1.16.0",
     "@remix-validated-form/with-zod": "^2.0.5",
-    "@unocss/reset": "^0.51.8",
-    "@vercel/remix": "1.16.0",
+    "@unocss/reset": "^0.51.12",
+    "@vercel/remix": "1.16.0-patch.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.12.7",
-    "inngest": "^1.8.0",
+    "framer-motion": "^10.12.10",
+    "inngest": "^1.8.2",
     "isbot": "^3.6.10",
-    "lucide-react": "^0.204.0",
+    "lucide-react": "^0.216.0",
     "match-sorter": "^6.3.1",
     "polished": "^4.2.2",
     "pretty-bytes": "^6.1.0",
@@ -57,7 +57,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.4",
     "react-expanding-textarea": "^2.3.6",
-    "react-virtuoso": "^4.3.5",
+    "react-virtuoso": "^4.3.6",
     "remix-validated-form": "^4.6.11",
     "routes-gen": "^0.6.0",
     "spin-delay": "^1.2.0",
@@ -65,7 +65,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@itsmapleleaf/configs": "^3.0.0",
+    "@itsmapleleaf/configs": "^3.0.1",
     "@remix-run/dev": "^1.16.0",
     "@remix-run/express": "^1.16.0",
     "@remix-run/serve": "^1.16.0",
@@ -73,31 +73,26 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.37.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.16.3",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "@unocss/eslint-config": "^0.51.8",
-    "@unocss/postcss": "^0.51.8",
-    "@unocss/preset-mini": "^0.51.8",
+    "@types/node": "^20.1.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@unocss/eslint-config": "^0.51.12",
+    "@unocss/postcss": "^0.51.12",
+    "@unocss/preset-mini": "^0.51.12",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "react-refresh": "^0.14.0",
     "tsx": "^3.12.7",
     "typescript": "5.0.4",
-    "unocss": "^0.51.8",
+    "unocss": "^0.51.12",
     "wait-on": "^7.0.1"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@unocss/eslint-plugin@0.51.8": "patches/@unocss__eslint-plugin@0.51.8.patch"
-    }
   }
 }
