--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@remix-run/router": "^1.6.1",
     "@remix-run/server-runtime": "^1.16.0",
     "@remix-validated-form/with-zod": "^2.0.5",
-    "@unocss/reset": "^0.51.12",
     "@vercel/remix": "1.16.0-patch.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
@@ -76,9 +75,6 @@
     "@types/node": "^20.1.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@unocss/eslint-config": "^0.51.12",
-    "@unocss/postcss": "^0.51.12",
-    "@unocss/preset-mini": "^0.51.12",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
@@ -88,11 +84,12 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.0",
     "react-refresh": "^0.14.0",
+    "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
     "typescript": "5.0.4",
-    "unocss": "^0.51.12",
     "wait-on": "^7.0.1"
   }
 }
