--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-popover": "^1.0.5",
-    "@remix-run/node": "^1.16.0",
-    "@remix-run/react": "^1.16.0",
-    "@remix-run/router": "^1.6.1",
-    "@remix-run/server-runtime": "^1.16.0",
+    "@remix-run/node": "1.16.1-pre.0",
+    "@remix-run/react": "1.16.1-pre.0",
+    "@remix-run/router": "1.6.2-pre.0",
+    "@remix-run/server-runtime": "1.16.1-pre.0",
     "@remix-validated-form/with-zod": "^2.0.5",
     "@vercel/remix": "1.16.0-patch.1",
     "clsx": "^1.2.1",
@@ -65,9 +65,8 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^3.0.1",
-    "@remix-run/dev": "^1.16.0",
-    "@remix-run/express": "^1.16.0",
-    "@remix-run/serve": "^1.16.0",
+    "@remix-run/dev": "1.16.1-pre.0",
+    "@remix-run/serve": "1.16.1-pre.0",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.37.0",
