--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@fontsource/rubik": "^4.5.14",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@liveblocks/client": "^1.0.8",
-    "@liveblocks/node": "^1.0.8",
-    "@liveblocks/react": "^1.0.8",
+    "@liveblocks/client": "^1.0.9",
+    "@liveblocks/node": "^1.0.9",
+    "@liveblocks/react": "^1.0.9",
     "@paralleldrive/cuid2": "^2.2.0",
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^4.14.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-popover": "^1.0.5",
-    "@remix-run/node": "1.16.1-pre.0",
-    "@remix-run/react": "1.16.1-pre.0",
-    "@remix-run/router": "1.6.2-pre.0",
-    "@remix-run/server-runtime": "1.16.1-pre.0",
+    "@remix-run/node": "1.16.1",
+    "@remix-run/react": "1.16.1",
+    "@remix-run/router": "1.6.2",
+    "@remix-run/server-runtime": "1.16.1",
     "@remix-validated-form/with-zod": "^2.0.5",
-    "@vercel/remix": "1.16.0-patch.1",
+    "@vercel/remix": "1.16.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.12.10",
-    "inngest": "^1.8.2",
+    "framer-motion": "^10.12.12",
+    "inngest": "^1.9.0",
     "isbot": "^3.6.10",
-    "lucide-react": "^0.216.0",
+    "lucide-react": "^0.219.0",
     "match-sorter": "^6.3.1",
     "polished": "^4.2.2",
     "pretty-bytes": "^6.1.0",
@@ -65,14 +65,14 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^3.0.1",
-    "@remix-run/dev": "1.16.1-pre.0",
-    "@remix-run/serve": "1.16.1-pre.0",
+    "@remix-run/dev": "1.16.1",
+    "@remix-run/serve": "1.16.1",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/eslint": "^8.37.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.1.3",
+    "@types/node": "^20.2.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "cross-env": "^7.0.3",
@@ -85,7 +85,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.14.0",
+    "prisma": "^4.14.1",
     "react-refresh": "^0.14.0",
     "tailwindcss": "^3.3.2",
     "tsx": "^3.12.7",
