--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   },
   "scripts": {
     "prepare": "prisma generate",
-    "dev": "run-p --race dev:*",
+    "dev": "pnpm run --parallel /^dev:/",
     "dev:remix": "remix dev",
     "dev:routes": "pnpm run routes --watch",
     "build": "remix build",
     "start": "remix-serve build",
-    "lint": "pnpm run routes && run-s --continue-on-error lint:*",
+    "lint": "pnpm run routes && pnpm run --parallel /^lint:/",
     "lint:tsc": "tsc -b",
     "lint:eslint": "eslint --ext js,ts,tsx .",
-    "format": "pnpm run routes && run-s --continue-on-error format:*",
+    "format": "pnpm run routes && pnpm run --sequential /^format:/",
     "format:eslint": "eslint --ext js,ts,tsx . --fix",
     "format:prettier": "prettier --write .",
     "routes": "routes-gen --driver @routes-gen/remix",
@@ -27,69 +27,67 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@fontsource/rubik": "^4.5.14",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@liveblocks/client": "^1.0.9",
-    "@liveblocks/node": "^1.0.9",
-    "@liveblocks/react": "^1.0.9",
-    "@paralleldrive/cuid2": "^2.2.0",
-    "@prisma/client": "^4.14.1",
+    "@liveblocks/client": "^1.1.6",
+    "@liveblocks/node": "^1.1.6",
+    "@liveblocks/react": "^1.1.6",
+    "@paralleldrive/cuid2": "^2.2.1",
+    "@prisma/client": "^5.0.0",
     "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-popover": "^1.0.5",
-    "@remix-run/node": "1.16.1",
-    "@remix-run/react": "1.16.1",
-    "@remix-run/router": "1.6.2",
-    "@remix-run/server-runtime": "1.16.1",
-    "@remix-validated-form/with-zod": "^2.0.5",
-    "@vercel/remix": "1.16.1",
-    "clsx": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@remix-run/node": "1.19.0",
+    "@remix-run/react": "1.19.0",
+    "@remix-run/router": "1.7.2",
+    "@remix-run/server-runtime": "1.19.0",
+    "@remix-validated-form/with-zod": "^2.0.6",
+    "@vercel/remix": "1.18.1",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.13.0",
     "inngest": "^1.9.0",
-    "isbot": "^3.6.10",
-    "lucide-react": "^0.219.0",
+    "isbot": "^3.6.13",
+    "lucide-react": "^0.262.0",
     "match-sorter": "^6.3.1",
     "polished": "^4.2.2",
-    "pretty-bytes": "^6.1.0",
+    "pretty-bytes": "^6.1.1",
     "react": "^18.2.0",
     "react-aria-components": "1.0.0-alpha.3",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.4",
+    "react-error-boundary": "^4.0.10",
     "react-expanding-textarea": "^2.3.6",
-    "react-virtuoso": "^4.3.6",
-    "remix-validated-form": "^4.6.11",
+    "react-virtuoso": "^4.4.1",
+    "remix-validated-form": "^5.0.2",
     "routes-gen": "^0.6.0",
     "spin-delay": "^1.2.0",
-    "tailwind-merge": "^1.12.0",
+    "tailwind-merge": "^1.14.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^3.0.1",
-    "@remix-run/dev": "1.16.1",
-    "@remix-run/serve": "1.16.1",
+    "@remix-run/dev": "1.19.0",
+    "@remix-run/serve": "1.19.0",
     "@routes-gen/remix": "^0.3.6",
-    "@rushstack/eslint-patch": "^1.2.0",
+    "@rushstack/eslint-patch": "^1.3.2",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@types/eslint": "^8.37.0",
+    "@types/eslint": "^8.44.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.2.0",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.40.0",
+    "eslint": "^8.45.0",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.14.1",
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.0.0",
     "react-refresh": "^0.14.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "tsx": "^3.12.7",
-    "typescript": "5.0.4",
+    "typescript": "5.1.6",
     "wait-on": "^7.0.1"
   }
 }
