--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "unused-deps": "depcheck"
   },
   "dependencies": {
+    "@fontsource-variable/spline-sans": "^5.0.5",
     "@paralleldrive/cuid2": "^2.2.1",
     "@prisma/client": "^5.0.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-popover": "^1.0.6",
+    "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/node": "^1.19.0",
     "@remix-run/react": "^1.19.0",
     "@remix-run/router": "^1.7.2",
@@ -51,6 +53,7 @@
     "@types/react-dom": "^18.2.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
+    "knip": "^2.16.1",
     "prettier": "^3.0.0",
     "prisma": "^5.0.0",
     "react-refresh": "^0.14.0",
