--- a/package.json
+++ b/package.json
@@ -12,36 +12,25 @@
     "dev:prisma": "prisma studio",
     "build": "remix build",
     "start": "remix-serve build",
-    "lint": "remix-routes && pnpm run --parallel --no-bail /^lint:/",
+    "lint": "remix-routes && pnpm run --parallel /^lint:/",
     "lint:tsc": "tsc -b",
-    "lint:eslint": "eslint --ext js,ts,tsx .",
+    "lint:eslint": "eslint .",
+    "lint:knip": "knip",
     "format": "remix-routes && pnpm run --sequential /^format:/",
-    "format:eslint": "eslint --ext js,ts,tsx . --fix",
-    "format:prettier": "prettier --write .",
-    "routes": "routes-gen --driver @routes-gen/remix",
-    "env-check": "tsx app/core/env.server.ts",
-    "unused-deps": "depcheck"
+    "format:eslint": "eslint . --fix",
+    "format:prettier": "prettier --write ."
   },
   "dependencies": {
     "@fontsource-variable/spline-sans": "^5.0.5",
-    "@paralleldrive/cuid2": "^2.2.1",
     "@prisma/client": "^5.0.0",
-    "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-popover": "^1.0.6",
     "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/node": "^1.19.0",
     "@remix-run/react": "^1.19.0",
-    "@remix-run/router": "^1.7.2",
-    "clsx": "^2.0.0",
     "isbot": "^3.6.13",
     "lucide-react": "^0.262.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-expanding-textarea": "^2.3.6",
-    "react-virtuoso": "^4.4.1",
-    "spin-delay": "^1.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -52,12 +41,10 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
     "knip": "^2.16.1",
     "prettier": "^3.0.0",
     "prisma": "^5.0.0",
-    "react-refresh": "^0.14.0",
     "remix-routes": "^1.4.4",
     "typescript": "~5.1.6"
   }
