--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource-variable/spline-sans": "^5.0.5",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-popover": "^1.0.6",
     "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
