--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,10 @@ concurrency:
 
 jobs:
   lint:
+    strategy:
+      matrix:
+        script: [tsc, eslint, knip]
+    name: lint:${{ matrix.script }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,4 +28,4 @@ jobs:
           node-version: "lts/*"
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
-      - run: pnpm run lint
+      - run: pnpm run lint:${{ matrix.script }}
