--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "pnpm run --parallel /^dev:/",
     "dev:remix": "remix dev",
     "dev:routes": "remix-routes --watch",
-    "dev:prisma": "prisma studio",
+    "dev:convex": "convex dev",
     "build": "remix build",
     "start": "remix-serve build",
     "lint": "pnpm run --parallel /^lint:/",
@@ -29,6 +29,7 @@
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "convex": "^1.0.2",
     "isbot": "^3.6.13",
     "lucide-react": "^0.263.0",
     "prisma": "^5.0.0",
