--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "18"
   },
   "scripts": {
-    "setup": "prisma generate && panda codegen && remix-routes",
+    "setup": "panda codegen && remix-routes",
     "dev": "pnpm run --parallel /^dev:/",
     "dev:remix": "remix dev",
     "dev:routes": "remix-routes --watch",
@@ -22,7 +22,6 @@
   },
   "dependencies": {
     "@fontsource-variable/spline-sans": "^5.0.5",
-    "@prisma/client": "^5.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-popover": "^1.0.6",
     "@remix-run/css-bundle": "^1.19.1",
@@ -32,7 +31,6 @@
     "convex": "^1.0.2",
     "isbot": "^3.6.13",
     "lucide-react": "^0.263.0",
-    "prisma": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-routes": "^1.4.4",
