--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "eslint": "^8.45.0",
     "knip": "^2.16.1",
     "prettier": "^3.0.0",
-    "typescript": "~5.1.6"
+    "typescript": "5.2.0-beta"
   }
 }
