--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "paths": {
-      "~/*": ["./app/*"],
+      "~/*": ["./src/*"],
       "convex/*": ["./convex/*"],
       "styled-system/*": ["./styled-system/*"]
     }
