--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:convex": "convex dev",
     "build": "vite build",
     "start": "vite preview",
-    "lint": "pnpm run --parallel /^lint:/",
+    "lint": "pnpm run --parallel --no-bail /^lint:/",
     "lint:tsc": "tsc -b",
     "lint:eslint": "eslint .",
     "lint:knip": "knip",
@@ -24,13 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@remix-run/css-bundle": "^1.19.1",
-    "@remix-run/node": "^1.19.1",
-    "@remix-run/react": "^1.19.1",
-    "@remix-run/router": "^1.7.2",
-    "@remix-run/serve": "^1.19.1",
     "convex": "^1.0.2",
-    "isbot": "^3.6.13",
     "lucide-react": "^0.263.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,7 +39,6 @@
   "devDependencies": {
     "@pandacss/dev": "^0.7.0",
     "@pandacss/preset-panda": "^0.7.0",
-    "@remix-run/dev": "^1.19.1",
     "@types/eslint": "^8.44.1",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
