--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"devDependencies": {
 		"@pandacss/dev": "^0.7.0",
 		"@pandacss/preset-panda": "^0.7.0",
+		"@total-typescript/ts-reset": "^0.4.2",
 		"@types/eslint": "^8.44.1",
 		"@types/node": "^20.4.4",
 		"@types/react": "^18.2.15",
