--- a/.eslintrc
+++ b/.eslintrc
@@ -64,7 +64,8 @@
 					"warn",
 					{ "argsIgnorePattern": "^_" }
 				],
-				"@typescript-eslint/require-await": "off"
+				"@typescript-eslint/require-await": "off",
+				"@typescript-eslint/no-floating-promises": "warn"
 			},
 			"parserOptions": {
 				"project": "./tsconfig.json"
