--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@fontsource-variable/spline-sans": "^5.0.5",
+		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-popover": "^1.0.6",
 		"@radix-ui/react-tooltip": "^1.0.6",
